fluxcd/core/base/rclone/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rclone
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rclone
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${S3_CIDR}
    ports:
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
    ports:
    - port: 443
      protocol: TCP
